samples/_failures_safe/1761421051_77502e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cacd53d.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_0cacd53d.c:165:35: error: expected ‘;’ at end of input
  165 |         case TOKEN_UNKNOWN: printf
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_0cacd53d.c:165:9: error: expected declaration or statement at end of input
  165 |         case TOKEN_UNKNOWN: printf
      |         ^~~~
./samples/SAFE/__tmp_0cacd53d.c:165:9: error: expected declaration or statement at end of input
